<resources>
    <string name="app_name">Cuniculapp</string>

    <!-- Main Concepts -->
    <string name="main_labors">Tareas</string>
    <string name="main_calendar">Calendario</string>
    <string name="main_settings">Configuración</string>
    <string name="main_replacement">Reposición</string>
    <string name="main_cycles">Ciclos</string>
    <string name="main_rabbits">Conejos</string>
    <string name="main_events">Eventos</string>

    <!-- Menu Descriptions -->
    <string name="menu_item_add">Añadir</string>
    <string name="menu_item_remove">Eliminar</string>
    <string name="menu_item_history">Histórico</string>
    <string name="menu_item_count">Confirmar</string>
    <string name="menu_item_clear">Deshacer</string>
    <string name="menu_item_sort">Ordenar</string>
    <string name="menu_item_search">Buscar</string>
    <string name="menu_item_archived">Archivados</string>

    <!-- Settings -->
    <string name="settings_notifications">Notificaciones</string>
    <string name="settings_alerts">Alertas</string>
    <string name="settings_pending_tasks">Tareas pendientes</string>
    <string name="settings_reminders">Recordatorios</string>
    <string name="settings_daily_summary">Resumen Diario</string>
    <string name="settings_profile">Perfil</string>
    <string name="settings_profile_name">Nombre</string>
    <string name="settings_username_summary">Nombrre que identifica al usuario</string>
    <string name="settings_username_hint">Inserta un nombre</string>

    <!-- Dialogs -->
    <string name="dialog_header_add">Añadir</string>
    <string name="dialog_header_remove">Quitar</string>
    <string name="dialog_header_error">Error</string>

    <string name="dialog_confirm">OK</string>
    <string name="dialog_delete_header">Eliminar</string>
    <string name="dialog_delete_text">¿Quieres eliminar los elementos seleccionados? Esta acción no se puede deshacer.</string>
    <string name="dialog_delete_confirm">Sí</string>
    <string name="dialog_delete_dismiss">No</string>
    <string name="dialog_error_text">Ha habido un error efectuando esta operación. Asegurate que tienes conexión a Internet e inténtalo de nuevo.</string>
    <string name="dialog_error_confirm">OK</string>

    <!-- Labor Search Activity -->
    <string name="labor_search_visualize">Visualizar</string>
    <string name="labor_search_visualize_unfinished">Sin Finalizar</string>
    <string name="labor_search_visualize_archive">Pendientes de Archivar</string>
    <string name="labor_search_visualize_manual">Creadas Manualmente</string>

    <string name="labor_search_date">Fechas</string>
    <string name="labor_search_date_start">Inicio</string>
    <string name="labor_search_date_end">Fin</string>

    <string name="labor_search_sort">Ordenación</string>
    <string name="labor_search_sort_finished">Finalizadas Antes</string>
    <string name="labor_search_sort_started">Iniciadas Antes</string>
    <string name="labor_search_sort_priority">Prioridad</string>

    <!-- Farm Fragment -->
    <string name="farm_name">Nombre</string>
    <string name="farm_jails">Nº Jaulas</string>
    <string name="farm_cycles">Nº Ciclos</string>
    <string name="farm_location">Localización</string>

    <!-- Farm Fragment -->
    <string name="labor_name">Tarea</string>

    <!-- Cycle Fragmen t-->
    <string name="cycle_dialog_insemination_day">Día inseminación</string>

    <!-- Replacement Fragment -->
    <string name="replacement_days">Días</string>
    <string name="replacement_rabbits">Nº Conejas</string>
    <string name="replacement_age">Edad</string>
    <string name="replacement_jails">Jaulas</string>
    <string name="replacement_jails_add">Añadir</string>
    <string name="replacement_jails_remove">Quitar</string>
    <string name="replacement_timeline">Evolución</string>
    <string name="replacement_timeline_changes">Cambios</string>
    <string name="replacement_timeline_reason">Motivo</string>
    <string name="replacement_timeline_date">Fecha</string>
    
    <!-- Events Fragment -->
    <string name="events_insemination">Inseminación</string>
    <string name="events_insemination_date">Fecha</string>
    <string name="events_insemination_amount">Inseminadas</string>
    <string name="events_palpation">Palpación</string>
    <string name="events_palpation_date">Fecha</string>
    <string name="events_palpation_pregnant">Preñadas</string>
    <string name="events_palpation_failed">Fallidas</string>
    <string name="events_palpation_fr">FR</string>
    <string name="events_births">Partos</string>
    <string name="events_births_date">Fecha</string>
    <string name="events_births_amount">Partos</string>
    <string name="events_births_alive">Nacidos vivos</string>
    <string name="events_births_dead">Nacidos muertos</string>
    <string name="events_births_average">Promedio</string>
    <string name="events_sales">Ventas</string>
    <string name="events_sales_date">Fecha</string>
    <string name="events_sales_amount">Vendidos</string>
    <string name="events_sales_prize">Precio Venta</string>
    <string name="events_sales_size">Peso Promedio</string>
    <string name="events_sales_feed">Coste Pienso</string>
    <string name="events_sales_ic">IC</string>
    <string name="events_sales_kg_ia">KG por IA</string>

    <!-- Rabbits Fragment -->
    <string name="rabbits_mothers">Madres</string>
    <string name="rabbits_kittens">Gazapos</string>
    <string name="rabbits_alive">Vivos</string>
    <string name="rabbits_jails">Jaulas</string>
    <string name="rabbits_add">Añadir</string>
    <string name="rabbits_remove">Quitar</string>

    <string name="rabbits_dialog_mother_amount">Nº de Conejas</string>
    <string name="rabbits_dialog_kitten_maternal_nest">Maternales Nido</string>
    <string name="rabbits_dialog_kitten_meet_nest">Cárnicos Nido</string>
    <string name="rabbits_dialog_kitten_maternal_bait">Maternales Cebo</string>
    <string name="rabbits_dialog_kitten_meet_bait">Cárnicos Cebo</string>
    <string name="rabbits_dialog_reason_transfer">Traslado</string>
    <string name="rabbits_dialog_reason_death">Muerte</string>
    <string name="rabbits_dialog_reason_other">Otro</string>

    <!-- Rabbits History Activity -->
    <string name="rabbits_history">Datos Conejos</string>
    <string name="rabbits_history_mother_initial">Madres Iniciales</string>
    <string name="rabbits_history_mother_alive">Madres Vivas</string>
    <string name="rabbits_history_kitten_maternal_initial">Maternales Iniciales</string>
    <string name="rabbits_history_kitten_meet_initial">Cárnicos Iniciales</string>
    <string name="rabbits_history_kitten_maternal_alive">Maternales Vivos</string>
    <string name="rabbits_history_kitten_meet_alive">Cárnicos Vivos</string>
    <string name="main_save">Guardar</string>

    <!-- Months -->
    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>


</resources>
