<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labor_search_visualize"
                android:textSize="21sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <CheckBox
                    android:id="@+id/labors_visualize_unfinished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="8dp"
                    android:text="@string/labor_search_visualize_unfinished"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/labors_visualize_archived"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="8dp"
                    android:text="@string/labor_search_visualize_archive"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/labors_visualize_manual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="8dp"
                    android:text="@string/labor_search_visualize_manual"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/color_accent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labor_search_date"
                android:textSize="21sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/labor_search_date_start"
                    android:textSize="18sp" />

                <upv.cuniculappteam.cuniculapp.view.utils.DateEditText
                    android:id="@+id/labors_date_start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="7"
                    android:focusable="true"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="08/11/2020" />

                <ImageView
                    android:id="@+id/labors_date_start_clear_button"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_clear_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/labor_search_date_end"
                    android:textSize="18sp" />

                <upv.cuniculappteam.cuniculapp.view.utils.DateEditText
                    android:id="@+id/labors_date_end_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="7"
                    android:focusable="true"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="08/11/2020" />

                <ImageView
                    android:id="@+id/labors_date_end_clear_button"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_clear_black_24dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/color_accent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labor_search_sort"
                android:textSize="21sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/labor_sort_rgroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/labor_sort_finished_radio"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/labor_sort_finished_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/labor_search_sort_finished"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/labor_sort_started_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/labor_search_sort_started"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/labor_sort_priority_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/labor_search_sort_priority"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>