<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/rabbits_dialog_kitten_maternal_nest"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/rabbits_dialog_kitten_meet_nest"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/rabbits_dialog_kitten_maternal_bait"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/rabbits_dialog_kitten_meet_bait"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="false"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rabbits_dialog__rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rabbits_dialog_transfer_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rabbits_dialog_death_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rabbits_dialog_other_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/rabbits_dialog_reason_transfer"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/rabbits_dialog_reason_death"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rabbits_dialog_other_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/rabbits_dialog_reason_other"
                    android:inputType="textPersonName" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:text="@string/rabbits_dialog_confirm"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="52dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Quitar" />
</androidx.constraintlayout.widget.ConstraintLayout>